--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Accessible Science</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
-        <link href="common.css" rel="stylesheet" type="text/css">
+        <link href="/styles/style.css" rel="stylesheet" type="text/css">
+        <link href="/styles/common.css" rel="stylesheet" type="text/css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
@@ -34,7 +34,7 @@
     
     
             <ul class="main-nav">
-                <img src="logo.png">
+                <img src="/images/logo.png">
                 <li data-text="Home"><a href="index.html">Home</a></li>
                  <li data-text="Sign Up"><a href="signUp.html">Sign Up</a></li>
                 <!-- <li data-text="Log In"><a href="logIn.html">Log In</a></li>   -->
@@ -63,7 +63,7 @@
     <div class="webSectionContainer">
         <div class="sectionContainer"  data-aos="fade-up">
             <div class="imageContainer">
-                <img src="writing.jpg" alt="">
+                <img src="/images/writing.jpg" alt="">
             </div>
             <div class="textContainer">
                 <h3>Our Mission</h3>
@@ -83,12 +83,12 @@
                 <p><span style="color:#d68073">&#9655</span> Check out the 'Articles' page to start reading!</p>
             </div>
             <div class="imageContainer">
-                <img src="articles.jpg" alt="">
+                <img src="/images/articles.jpg" alt="">
             </div>
         </div>
         <div class="sectionContainer"  data-aos="fade-up">
             <div class="imageContainer">
-                <img src="writers.jpg">
+                <img src="/images/writers.jpg">
             </div>
             <div class="textContainer">
                 <h3>Writers</h3>
@@ -123,7 +123,7 @@
 
             </div>
             <div class="imageContainer">
-                <img src="writing.jpg" alt="">
+                <img src="/images/writing.jpg" alt="">
             </div>
         </div>
         <div class="sectionContainer" data-aos="fade-up">
@@ -135,7 +135,7 @@
                 <p><span style="color:#d68073">&#9655</span> Check out the 'Articles' page to start reading!</p>
             </div>
             <div class="imageContainer">
-                <img src="articles.jpg" alt="">
+                <img src="/images/articles.jpg" alt="">
             </div>
         </div>
         <div class="sectionContainer" data-aos="fade-up">
@@ -148,7 +148,7 @@
 
             </div>
             <div class="imageContainer">
-                <img src="writers.jpg" alt="">
+                <img src="/images/writers.jpg" alt="">
             </div>
         </div>
 
