--- a/signUp.html
+++ b/signUp.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Sign Up - Accessible Science</title>
-        <link href="register.css" rel="stylesheet" type="text/css">
-        <link href="common.css" rel="stylesheet" type="text/css">
+        <link href="/styles/register.css" rel="stylesheet" type="text/css">
+        <link href="/styles/common.css" rel="stylesheet" type="text/css">
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 
 
         <ul class="main-nav">
-          <img src="logo.png">
+          <img src="/images/logo.png">
 
           <li data-text="Home"><a href="index.html">Home</a></li>
           <li data-text="Articles"><a href="articles.html">Articles</a></li>
