--- a/upload.html
+++ b/upload.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Upload - Accessible Science</title>
-        <link href="register.css" rel="stylesheet" type="text/css">
-        <link href="common.css" rel="stylesheet" type="text/css">
+        <link href="/styles/register.css" rel="stylesheet" type="text/css">
+        <link href="/styles/common.css" rel="stylesheet" type="text/css">
 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
