--- a/team.html
+++ b/team.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>Team - Accessible Science</title>
-        <link href="common.css" rel="stylesheet" type="text/css">
-        <link href="team.css" rel="stylesheet" type="text/css">
+        <link href="/styles/common.css" rel="stylesheet" type="text/css">
+        <link href="/styles/team.css" rel="stylesheet" type="text/css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script src="articles.js"></script>
@@ -32,7 +32,7 @@
         
         
                 <ul class="main-nav">
-                    <img src="logo.png">
+                    <img src="/images/logo.png">
                     <li data-text="Home"><a href="index.html">Home</a></li>
                     <li data-text="Articles"><a href="articles.html">Articles</a></li>
                     <li data-text="Sign Up"><a href="signUp.html">Sign Up</a></li>            
